--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # View & likes tracking 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/swifts_nest"
-DIRECT_DATABASE_URL="postgresql://postgres:postgres@localhost:5432/swifts_nest"
+DATABASE_URL="postgresql://clarence:@localhost:5432/theodorusclarence"
+DIRECT_DATABASE_URL="postgresql://clarence:@localhost:5432/theodorusclarence"
 IP_ADDRESS_SALT=
 
 # Dev.to Credentials for getting views
