--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "date-fns": "^2.30.0",
     "katex": "^0.16.21",
     "lodash": "^4.17.21",
-    "next": "^12.3.4",
+    "next": "13",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "query-string": "^7.1.3",
@@ -76,7 +76,7 @@
     "cypress": "^9.6.1",
     "esbuild": "^0.17.19",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.4",
+    "eslint-config-next": "13",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
