--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "date-fns": "^2.30.0",
     "katex": "^0.16.21",
     "lodash": "^4.17.21",
-    "next": "13",
+    "next": "^14.2.28",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "query-string": "^7.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18",
+    "react-dom": "18",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.11.0",
@@ -76,7 +76,7 @@
     "cypress": "^9.6.1",
     "esbuild": "^0.17.19",
     "eslint": "^7.32.0",
-    "eslint-config-next": "13",
+    "eslint-config-next": "^14.2.28",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
