vercel: add bjut-cs redirect

--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,11 @@
         }
       ]
     }
-  ]
+  ],
+  "rewrites": [
+    {
+      "source": "/bjut-cs/:path*",
+      "destination": "https://bjut-swift.github.io/BJUT-CS/:path*"
+    }
+  ],
 }
